--- a/SkillMatrix.html
+++ b/SkillMatrix.html
@@ -5,7 +5,7 @@
 <script src=".\SkillMatrix.js"></script>
 </head>
 <body>
-<div ng-app="SkillMatrix" class="container" ng-controller="Book">
+<div ng-app="SkillMatrix" class="container" ng-controller="Skill">
 <table class="table table-striped table-bordered">
 <tr>
 
@@ -13,7 +13,7 @@
 </br></br></br>
 <td>Name</td>
 <td>
-<input type="text" class="form-control" ng-model="item.name" /></td>
+    <input type="text" class="form-control" ng-model="item.name" ng-required="true"/></td>
 </tr>
 <tr>
 <td>C#</td>
@@ -71,84 +71,72 @@ Add
 </td>
 </tr>
 </table>
-<table class="table table-striped table-bordered">
-<thead>
-<tr>
-<th>Name</th>
-<th>C#</th>
-<th>Java</th>
-<th>PHP</th>
-<th>AngularJS</th>
-<th>Edit</th>
-<th>Remove</th>
-</tr>
-</thead>
-<tbody>
-        <h2 align="Center">Index</h2></br>
-<tr ng-repeat="item in items">
-    <td><span ng-hide="editMode">{{item.name}}</span>
-      <input type="text" ng-show="editMode" ng-model="item.name" />
-      </td>
-<td>
-    <span ng-hide="editMode">{{item.cValue}}</span>
-    <input type="text" ng-show="editMode" ng-model="item.cValue" />
-    </td>
-<td>
-    <span ng-hide="editMode">{{item.JavaValue}}</span>
-    <input type="text" ng-show="editMode" ng-model="item.JavaValue" />
-    </td>
-<td>
-    <span ng-hide="editMode">{{item.PhpValue}}</span>
-    <input type="text" ng-show="editMode" ng-model="item.PhpValue" />
-    </td>
-<td>
-    <span ng-hide="editMode">{{item.AnValue}}</span>
-    <input type="text" ng-show="editMode" ng-model="item.AnValue" />
-    </td>
-<td>
-<i ng-hide="editMode" ng-click="editMode = true; editItem(item)" class="glyphicon glyphicon-edit"></i>
-<i class="glyphicon glyphicon-saved" ng-show="editMode" ng-click="editMode = false"></i>
-</td>
-<td>
-<i ng-click="removeItem($index)" class="glyphicon glyphicon-trash"></i>
-</td>
-</tr>
-</tbody>
-</table>
 
+<form>
+    <div class="form-group">
+        <div class="input-group">
+        <!-- <div class="input-group-addon"><i class="fa fa-search"></i></div> -->
+        <input type="text" class="form-control" placeholder="Search By Name" ng-model="SkillSerach">
+        </div>
+    </div>
+</form>
 
-<h2 align="Center">Search</h2>
-<table class="table table-striped table-bordered">
-    <thead>
-        <tr>
-        <th><input type="text" placeholder="Search by Name" ng-model="SkillSerach"></th>
-        </tr>
+<table class="table table-bordered table-striped">
+
+        <thead>
+          <tr>
+            <td>
+              <a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+                Name
+                <span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
+                <span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
+              </a>
+            </td>
+            <td>
+              <a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+                C#
+                <span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
+                <span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
+              </a>
+            </td>
+            <td>
+              <a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+                Java
+                <span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
+                <span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
+              </a>
+            </td>
+            <td>
+            <a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+                PHP
+                <span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
+                <span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
+            </a>
+            </td>
+            <td>
+            <a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+                AngularJS
+            <span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
+            </a>
+            </td>
+            <td>
+                <i ng-click="removeItem($index)" class="glyphicon glyphicon-trash"></i>
+            </td>
+          </tr>
         </thead>
-    <thead>
-    <tr>
-    <th>Name</th>
-    <th>C#</th>
-    <th>Java</th>
-    <th>PHP</th>
-    <th>AngularJS</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="item in items | filter:{name: SkillSerach}">
-        <td><span>{{item.name}}</span>
-          </td>
-    <td>
-        <span>{{item.cValue}}</span>
-        </td>
-    <td>
-        <span>{{item.JavaValue}}</span>
-        </td>
-    <td>
-        <span>{{item.PhpValue}}</span>
-        </td>
-    <td>
-        <span>{{item.AnValue}}</span>
-        </td>
-    </tr>
-    </tbody>
-    </table>
+
+        <tbody>
+          <tr ng-repeat="item in items | orderBy:sortType:sortReverse | filter:SkillSerach">
+            <td>{{ item.name }}</td>
+            <td>{{ item.cValue }}</td>
+            <td>{{ item.javaValue }}</td>
+            <td>{{ item.PhpValue }}</td>
+            <td>{{ item.AnValue }}</td>
+            <td>
+                <i ng-click="removeItem($index)" class="glyphicon glyphicon-trash"></i>
+            </td>
+          </tr>
+        </tbody>
+
+      </table>
